--- a/prototype_madison/modules/categories/categories.css
+++ b/prototype_madison/modules/categories/categories.css
@@ -1,93 +1,57 @@
 .mod-categories {
-    padding: 0 0 3px 0;
     position: relative;
 }
-.mod-categories .horizontal-bar {
-    border-top: 1px solid #D4D3D2;
-    border-bottom: 1px solid #FDFDF5;
-    margin-bottom: 6px;
+.mod-categories .curr-category {
+    padding: 20px 0;
 }
-.mod-categories .teasers p {
-    display: inline;
-
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    color: #6d6d6d;
-    font-size: 11px;
-    text-transform: uppercase;
+.mod-categories .triangle-down {
+    bottom: 0;
+    margin-left: 10px;
 }
-.mod-categories .teasers ul li {
-    margin-left: 18px;
-}
-.mod-categories .teasers .teaser-list {
-    display: inline-block;
-    width: auto;
-}
-.mod-categories .show-more:hover,
-.mod-categories .show-less:hover{
-    text-decoration: underline;
-}
-.mod-categories .show-more,
-.mod-categories .show-less {
-    cursor: pointer;
-    width: auto;
-
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #08B4DF;
-    font-size: 12px;
-}
-.mod-categories .show-more,
-.mod-categories .show-less {
+.mod-categories .all-categories {
+    background: none repeat scroll 0 0 #EBEBEA;
+    height: 0;
+    margin-left: -16px;
+    overflow: hidden;
+    padding-left: 25px;
     position: absolute;
-    top: 14px;
-    right: 8px;
+    top: 60px;
+    transition: height 1s ease 0s;
+    white-space: nowrap;
+    border: 1px solid #CCCBCB;
+    border-top-width: 0;
+    box-shadow: 1px 0 #FFFFFF inset;
+
+
+    -webkit-transition: height 1s, border-top-width 1s; /* Safari and Chrome */
+         -o-transition: height 1s, border-top-width 1s; /* Opera */
+            transition: height 1s, border-top-width 1s;
 }
-.mod-categories .show-more .triangle-down {
-    bottom: 1px;
-    left: 3px;
+.mod-categories:hover .all-categories {
+    height: 150px;
+    border-top-width: 1px;
+
 }
-.mod-categories .show-less .triangle-up {
-    bottom: 8px;
-    left: 3px;
-}
-.mod-categories .bd ul {
-    text-align: left;
-    width: 22.5%;
-}
+
 .mod-categories .all-categories ul {
-    float: left;
+    display: inline-block;
+    margin-right: 25px;
+    vertical-align: top;
 }
-.mod-categories .bd li a {
+.mod-categories li a {
     text-decoration: none;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #08B4DF;
     font-size: 12px;
     line-height: 2.2em;
 }
-.mod-categories .bd li.selected a .title {
+.mod-categories li.selected a .title {
     font-weight: bold;
 }
-.mod-categories .bd li a:hover {
+.mod-categories li a:hover {
     text-decoration: underline;
 }
-.mod-categories .bd li.selected a {
+.mod-categories li.selected a {
     color: #444;
 }
-.mod-categories.categories-show-teasers .all-categories {
-    display: none;
-}
-.mod-categories.categories-show-teasers .teasers {
-    display: block;
-}
-.mod-categories.categories-no-teasers .all-categories {
-    display: block;
-}
-.mod-categories.categories-no-teasers .teasers {
-    display: none;
-}
-.mod-categories .expander {
-    cursor: pointer;
-    display: inline-block;
-    vertical-align: middle;
-    bottom: -3px;
-}
+
