--- a/prototype_madison/modules/misc/misc.css
+++ b/prototype_madison/modules/misc/misc.css
@@ -6,7 +6,7 @@
             box-shadow: 0px 2px 8px rgba(50, 50, 50, 0.5);
 }
 .mod-miscellaneous .content {
-    margin: 30px auto 0 auto;
+    margin: 0 auto;
     max-width: 980px;
 }
 .mod-miscellaneous .promos li {
@@ -77,6 +77,8 @@
     text-align: center;
 }
 .mod-miscellaneous .top {
+    margin-top:30px;
+    padding-top: 30px;
     padding-bottom: 20px;
 }
 .mod-miscellaneous .bottom {
