--- a/prototype_madison/two-column-layout.css
+++ b/prototype_madison/two-column-layout.css
@@ -14,6 +14,7 @@ body {
     background-color: #FAF9F5;
     margin: 0 auto;
     width: 980px;
+    padding-bottom: 30px;
 }
 .wrapper .shadow {
     background: #faf9f5;
