--- a/prototype_madison/modules/leavebehind/leavebehind.css
+++ b/prototype_madison/modules/leavebehind/leavebehind.css
@@ -5,13 +5,16 @@
     overflow: hidden;
 
     -webkit-transition: height 1s; /* Safari and Chrome */
+       -moz-transition: height 2s;  
          -o-transition: height 1s; /* Opera */
             transition: height 1s;
 }
 .fixed-header .mod-leavebehind {
-	height: auto;
+	height: 134px;
 }
-
+/*.mod-leavebehind.expanded {
+    height: 134px;
+}*/
 .mod-leavebehind .frame {
     margin: 20px auto;
     max-width: 980px;
