--- a/prototype_madison/modules/printcontrol/printcontrol.css
+++ b/prototype_madison/modules/printcontrol/printcontrol.css
@@ -8,7 +8,7 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
     color: #fff;
-    text-shadow: 0 -1px #a54133;
+    text-shadow: 0 -1px rgb(49, 57, 97);
     font-size: 13px;
     border-radius: 3px;
     box-shadow: 0 1px 2px #A0927D, inset 0 1px white;
@@ -32,8 +32,8 @@
     padding-left: 24px;
     padding-right: 18px;
 
-    border-right: 1px solid #D12C13;
-    box-shadow: 1px 0 #F1806E;
+    border-right: 1px solid #0b93ce;
+    box-shadow: 1px 0 #80ccec;
 }
 .mod-printcontrol .print-button.clipped-none .title {
     background-position: 0 -265px;
