--- a/prototype_madison/modules/stalker/stalker.css
+++ b/prototype_madison/modules/stalker/stalker.css
@@ -13,13 +13,12 @@
     margin: auto;
     max-width: 980px;
     position: relative;
-    height: 60px;
 }
 .mod-stalker .module {
     border-right: 1px solid #CCCBCB;
     box-shadow: 1px 0 #FFFFFF;
     float: left;
-    height: 100%;
+    height: 50px;
     padding: 0 15px;
 }
 .mod-stalker .module:last-child {
@@ -48,22 +47,27 @@
     margin-top: 15px;
 }
 .mod-sitenav .triangle-down {
-    bottom: 12px;
+    bottom: 15px;
 }
 
 
 .mod-sortcontrol .curr-sort {
+    color: #666666;
+    font-family: "helvetica neue";
+    font-size: 10px;
+    font-weight: bold;
     padding: 20px 0;
+    text-transform: uppercase;
 }
 .mod-sortcontrol .triangle-down {
-    bottom: 0;
+    bottom: 1px;
     margin-left: 10px;
 }
-
+/*
 .mod-zipcode .curr-zip {
     padding: 20px 0;
 }
 .mod-zipcode .triangle-down {
     bottom: 0;
     margin-left: 10px;
-}
+}*/
