--- a/prototype_madison/modules/couponcarrier/couponcarrier.css
+++ b/prototype_madison/modules/couponcarrier/couponcarrier.css
@@ -1,5 +1,5 @@
 .mod-couponcarrier {
-    margin-top: 15px;
+    margin: 15px;
 }
 .mod-couponcarrier.is-active-user .active-user {
     display: inline-block;
