--- a/prototype_madison/modules/stalker/stalker.css
+++ b/prototype_madison/modules/stalker/stalker.css
@@ -19,9 +19,8 @@
     box-shadow: 1px 0 #FFFFFF;
     float: left;
     height: 50px;
-    padding: 0 15px;
 }
-.mod-stalker .module:last-child {
+.mod-stalker .module.last {
     border:none;
     padding-right: 0;
     box-shadow: none;
@@ -43,13 +42,12 @@
 /***************************
  * Module sitenav
  ***************************/
-.mod-sitenav {
+/*.mod-sitenav {
     margin-top: 15px;
 }
 .mod-sitenav .triangle-down {
     bottom: 15px;
 }
-
 
 .mod-sortcontrol .curr-sort {
     color: #666666;
@@ -63,7 +61,7 @@
     bottom: 1px;
     margin-left: 10px;
 }
-/*
+
 .mod-zipcode .curr-zip {
     padding: 20px 0;
 }
