--- a/prototype_madison/modules/categories/categories.css
+++ b/prototype_madison/modules/categories/categories.css
@@ -1,4 +1,4 @@
-.mod-categories {
+/*.mod-categories {
     position: relative;
     padding: 0 15px;
 }
@@ -25,8 +25,8 @@
     white-space: nowrap;
 
 
-    -webkit-transition: height 1s; /* Safari and Chrome */
-         -o-transition: height 1s; /* Opera */
+    -webkit-transition: height 1s;
+         -o-transition: height 1s;
             transition: height 1s;
 }
 .mod-categories:hover .all-categories {
@@ -58,4 +58,26 @@
 .mod-categories li.selected a {
     color: #444;
 }
+*/
+ul.cssMenu li.cssMenui0.mod-categories:hover ul.cssMenu-sub {
+    height: 117px;
+}
 
+.mod-categories .all-categories {
+    min-width: 575px;
+}
+.mod-categories .cat-col {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.mod-categories .all-categories a,
+.mod-categories .all-categories a strong {
+    text-decoration: none;
+    font-size: 11px;
+    font-weight: bold;
+    color: #666;
+}
+.mod-categories .all-categories a:hover {
+    text-decoration: underline;
+}
