--- a/prototype_madison/modules/leavebehind/leavebehind.css
+++ b/prototype_madison/modules/leavebehind/leavebehind.css
@@ -10,13 +10,10 @@
             transition: height 1s;
 }
 .fixed-header .mod-leavebehind {
-	height: 134px;
+	height: 115px;
 }
-/*.mod-leavebehind.expanded {
-    height: 134px;
-}*/
 .mod-leavebehind .frame {
-    margin: 20px auto;
+    margin: 1% auto;
     max-width: 980px;
 }
 
