--- a/prototype_madison/modules/leavebehind/leavebehind.css
+++ b/prototype_madison/modules/leavebehind/leavebehind.css
@@ -10,10 +10,10 @@
             transition: height 1s;
 }
 .fixed-header .mod-leavebehind {
-	height: 115px;
+	height: 100px;
 }
 .mod-leavebehind .frame {
-    margin: 1% auto;
+    margin: 5px auto;
     max-width: 980px;
 }
 
